# StreamlineX

./: .gitignore  .gitmodule  .gitmodules  .gitmodules.txt  CMakeLists.txt  README.md  main.cpp  serialization.sln
.github/workflows/: cmake.yml  ubuntu.yml
EventSystem/: CMakeLists.txt  EventSystem.vcxproj  EventSystem.vcxproj.filters
EventSystem/include/: CMakeLists.txt  keyboard.h  mouseevent.h  window.h  windowevent.h
EventSystem/src/: CMakeLists.txt  event.h  main.cpp  window.cpp  window.h
client/: CMakeLists.txt  client.vcxproj  client.vcxproj.filters
client/src/: client.cpp  client.h  main.cpp
java/com/oleksadrshekera/net/: Client.java
serialization/: CMakeLists.txt  main.cpp  serialization.vcxproj  serialization.vcxproj.filters
serialization/include/: CMakeLists.txt  array.h  core.h  lib.h  meta.h  object.h  primitive.h  root.h  serialization.h
serialization/src/: CMakeLists.txt  array.cpp  array.h  core.cpp  core.h  lib.h  main.cpp  meta.h  object.cpp  object.h  primitive.cpp  primitive.h  root.h  serialization.h
serialization/tests/: CMakeLists.txt  tests.cpp
server/: CMakeLists.txt  server.vcxproj  server.vcxproj.filters
server/src/: main.cpp  server.cpp  server.h
userland/: Foo.abc  userland.vcxproj  userland.vcxproj.filters
userland/src/: main.cpp
